# contracts

./: .licenserc.yaml  .tool-versions  Makefile  README.adoc  README.md  generate_elixir.sh  generate_golang.sh  mix.exs
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml
elixir/: .formatter.exs  .gitignore  Makefile  README.md  mix.exs
elixir/lib/: contracts.ex  execution_completed_v1.ex  (+7 more)
go/: .gitignore  Makefile  go.mod  go.sum
golang/: go.mod  go.sum
lib/: proto.ex
protobuf/: check_custom_value.proto  check_customization_applied.proto  check_customization_reset.proto  cloudevent.proto  discovery_requested.proto  execution_completed.proto  execution_requested.proto  execution_started.proto  facts_gathered.proto  facts_gathering_requested.proto  operation_completed.proto  operation_execution_completed.proto  operation_execution_requested.proto  operation_requested.proto  operation_started.proto  operation_target.proto  operator_execution_completed.proto  operator_execution_requested.proto  resource_type.proto  target.proto  target_type.proto
rust/trento-contracts/: Cargo.toml
rust/trento-contracts/src/: events.rs  lib.rs
rust/trento-contracts/src/stubs/: cloudevent.rs  execution_completed.rs  execution_requested.rs  execution_started.rs  facts_gathered.rs  facts_gathering_requested.rs  mod.rs  target.rs
schema/: schema.json.example  trento.checks.v1.ExecutionCompleted.schema.json  trento.checks.v1.FactsGathered.schema.json  trento.checks.v1.FactsRequest.schema.json  trento.checks.v1.agent.FactsGathered.schema.json
test/: proto_test.exs
(+87 files in other folders)
